--- a/Englix-and-chill/src/index.html
+++ b/Englix-and-chill/src/index.html
@@ -9,17 +9,6 @@
   </head>
   <body>
     <div id="root">not rendered</div>
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script
-      src="https://unpkg.com/react@18/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-      crossorigin
-    ></script>
-
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
